fixed alignment issue of expanded options

--- a/components/src/core/components/Input/TreeSelect/tree-select-input.scss
+++ b/components/src/core/components/Input/TreeSelect/tree-select-input.scss
@@ -21,7 +21,7 @@ td {
 }
 
 .option-label-without-icon {
-  margin-left: 27px;
+  margin-left: 20px;
 }
 
 .icon-td {
